# MobRob_ROS_myrobot

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  mobrob.machine  robot.launch  robot_basic_config.launch  robot_basic_config_real.launch  robot_basic_config_sim.launch
msg/: Pose.msg
rviz/: urdf.rviz
src/: attiny_server_sim.cpp  attiny_server_sim.py  camera_server_sim.py  odom_converter.cpp
src/gazebo_plugins/: attiny_server_sim_gazebo.cpp  gripper_move.cc
urdf/: materials.urdf.xacro  mobrob.gazebo  mobrob_fixed.urdf  mobrob_gpu.gazebo  mobrob_move.urdf  mobrob_move.xacro
